# tess-tools

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  RELEASE.md  SCHEMA.md  SECURITY.md  VALIDATION_TARGETS.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  provider-gap.yml
.github/workflows/: ci.yml  release.yml
tess_tools/: __init__.py  cache.py  cli.py  crowding.py  cutout.py  fetch.py  inventory.py  known.py  live_validate.py  mast_api.py  models.py  normalize.py  output.py  products.py  recommend.py  sectors.py  summaries.py  target.py
tests/: test_tess_where_offline.py
validation/: live_targets.json
